# Balbino

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  BalbinoBuble.sln  BalbinoEngine.sln  BalbinoEngine.sln.DotSettings  CMakeLists.txt  CMakePresets.json  Minigin.sln  README.md  Setup.ps1  Setup.sh  TODO.txt  vld.props
Balbino/: Avatar.cpp  Avatar.h  Background.cpp  Background.h  Balbino.cpp  Balbino.filters  Balbino.h  Balbino.vcxproj  Balbino.vcxproj.filters  CMakeLists.txt  DAELogo.cpp  EntryPoint.cpp  EntryPoint.h  FPSCounter.cpp  Font.h  InputManager.cpp  InputManager.h  IntroText.cpp  Main.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.h  Singleton.h  Text.cpp  Texture2D.h  Time.cpp  Time.h  Transform.cpp  Transform.h  UBOStructs.h
Balbino/Debug/Balbino.tlog/: Balbino.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Balbino/Shaders/: Basic.vs
Balbino/scr/: Application.cpp  Application.h  Avatar.cpp  Avatar.h  BalbinoCore.cpp  BalbinoCore.h  BalbinoPCH.cpp  BalbinoPCH.h  BinaryReaderWrider.cpp  BinaryReaderWrider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.h  Debug.cpp  Debug.h  EntryPoint.h  FPSScript.cpp  FPSScript.h  Font.cpp  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Math.h  PhysicsWorld.cpp  PhysicsWorld.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  (+12 more)
Balbino/scr/Components/: All.h  Animation.cpp  Animation.h  Audio.cpp  Audio.h  Avatar.cpp  Avatar.h  BoxCollider2D.cpp  BoxCollider2D.h  Bubble.cpp  Bubble.h  BubbleManager.cpp  BubbleManager.h  Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.h  Collider2D.cpp  Collider2D.h  Component.cpp  Component.h  Enemy.cpp  Enemy.h  FPSScript.cpp  FPSScript.h  LevelLoader.cpp  LevelLoader.h  Rigidbody2D.cpp  Rigidbody2D.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
Balbino/scr/Editor/: AssetBrouser.cpp  AssetBrouser.h  Debug.cpp  Debug.h  File.h  SpriteEditor.cpp  SpriteEditor.h
Balbino/scr/GameObject/: GameObject.cpp  GameObject.h
Balbino/scr/Input/: InputButtons.cpp  InputButtons.h  InputHandler.cpp  InputHandler.h
Balbino/scr/Managers/: CameraManager.cpp  CameraManager.h  Manager.cpp  Manager.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  System.cpp  System.h  TextureManager.cpp  TextureManager.h
Balbino/scr/Renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshMaterialData.h  MeshMetadata.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureSampler.cpp  TextureSampler.h  UBOStructs.h  UniformBufferObject.cpp  UniformBufferObject.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Balbino/scr/Scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Balbino/scr/Shaders/: Font.fs
Balbino/scr/imgui-1.75/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_extra.cpp  imgui_extra.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_internal.h  imgui_plot.cpp  imgui_sdl.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Balbino/x64/Debug/: vc142.idb
Blink/: imgui.ini  (+3 more)
Editor/: CMakeLists.txt  Cube.basset  Editor.vcxproj  Editor.vcxproj.filters  TexturedMaterial.basset  TexturedShader.basset
Editor/Data/: brickTexture.glsl  checkerTexture.glsl  vectorMath.glsl
Editor/resource/: Cursor.cur  NoDrop.cur  WP7BusyBG.cur
Editor/resource/Shaders/: Basic.frag  Screen.vert
Editor/scr/: Interface.cpp  Interface.h  main.cpp  pch.h
Engine/: Balbino.h  CMakeLists.txt
Engine/Common/: BalMath.h  CMakeLists.txt  Core.h  FileParcer.h  ICameraManager.h  IEntity.h  IMesh.h  IResourceManager.h  IScene.h  IShader.h  Light.h  Material.h  MeshMetadata.h  Texture.h
Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Random.cpp  Random.h
Engine/Editor/: CMakeLists.txt
Engine/Renderer/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  UBOStructs.h  VertexBuffer.cpp  VertexBuffer.h
Game/: AudioFile.basset  CMakeLists.txt  DisplaySettings.ini  Game.vcxproj  Game.vcxproj.filters  imgui.ini  resource.rc
Game/scr/: main.cpp  pch.h
Renderer/GraphicsVulkan/: Base.cpp  Base.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandPool.cpp  CommandPool.h  Common.cpp  Common.h  Core.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Funtions.h  GraphicsVulkan.vcxproj  GraphicsVulkan.vcxproj.filters  ImageResource.cpp  ImageResource.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderPipeline.h  Swapchain.cpp  (+4 more)
Renderer/Imgui/: CMakeLists.txt  GraphEditor.cpp  GraphEditor.h  ImGuizmo.cpp  ImGuizmo.h  graph.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imnodes.cpp  imnodes.h  imnodes_internal.h
Source/Application/: Application.cpp  Application.h  Balbino.h  Balbino_main.h  CMakeLists.txt  EntryPoint.h
Source/Editor/: CMakeLists.txt
Source/Engine/: Application.cpp  Application.h  Balbino.h  Balbino_main.h  CMakeLists.txt  EntryPoint.h  Versions.hpp
Source/Game/: CMakeLists.txt  Versions.hpp  main.cpp
Source/Memory/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  MemoryManagerCore.h
Tests/: AntlerTestCore.h  CMakeLists.txt  GraphicDeviceTest.cpp  test_main.cpp
source/editor/: CMakeLists.txt  Interface.cpp  Interface.h
source/engine/: CMakeLists.txt  application.cpp  application.hpp  balbino.hpp  balbino_main.hpp  entry_point.hpp
source/game/: CMakeLists.txt  main.cpp
(+944 files in other folders)
